--- a/Views/RedCat/Create.cshtml
+++ b/Views/RedCat/Create.cshtml
@@ -1,10 +1,51 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-	ViewData["title"] = "Register";
-}
-<h1>@ViewData["title"]</h1>
+﻿@model MiMWebsite.Models.UserModel
 
-@Html.TextBox("txt",null,new { @class = "form-control", placeholder = "Enter Name "})
-<input type="text" id="txt" name="txt" class="form-control" placeholder="Enter Names"/>
+@{
+	ViewBag.Title = "Register";
+}
+@section Styles
+{
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" />
+}
+
+<h2>Create</h2>
+@using (Html.BeginForm("create", "movie", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+	<div class="form-group">
+		@Html.LabelFor(model => model.AcNo, "เบอร์บัญชี")
+		@Html.TextBoxFor(model => model.AcNo, new { @class = "form-control", placeholder = "กรอกเบอร์บัญชี" })
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.AcName, "ชื่อ Account")
+		@Html.TextBoxFor(model => model.AcName, new { @class = "form-control", placeholder = "ชื่อ Account" })
+		
+		
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Tel, "เบอร์โทรศัพท์")
+		@Html.TextBoxFor(model => model.Tel, new { @class = "form-control", placeholder = "เบอร์โทรศัพท์" })
+
+
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Password, "Password")
+		@Html.TextBoxFor(model => model.Password, new { @class = "form-control", placeholder = "Password", type = "text" })
+	</div>
+	<div class="form-group">
+		<input type="submit" value="create" class="btn btn-primary" />
+	</div>
+	
+}
+
+@section Scripts
+    {
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+	<script type="text/javascript">
+        $(function() {
+            $('#dtReleaseDate').datetimepicker({
+                defaultDate: new Date(),
+            });
+        });
+	</script>
+}
